[package]
name = "lab-04"
version = "0.2.0"
authors = ["Filip Plata <fp371335@students.mimuw.edu.pl>", "Mateusz Banaszek <m.banaszek@mimuw.edu.pl"]
edition = "2024"

[dev-dependencies]
tokio = { version = "1.48", features = ["full", "test-util"] }
async-trait = "0.1"
reqwest = "0.12"
futures = "0.3"

[lints.rust]
unsafe_code = "forbid"
